# Copyright 2024 The Chromium Radium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//chrome/version.gni")

# Full version. For example "45.0.12321.0"
radium_version_full = chrome_version_full

# The constituent parts of the full version.
radium_version_major = chrome_version_major
radium_version_minor = chrome_version_minor
radium_version_build = chrome_version_build
radium_version_patch = chrome_version_patch

if (is_mac) {
  radium_version_patch_hi = chrome_version_patch_hi
  radium_version_patch_lo = chrome_version_patch_lo

  radium_dylib_version = "$radium_version_build.$radium_version_patch_hi" +
                         ".$radium_version_patch_lo"
} else if (target_os == "android") {
  forward_variables_from(_result,
                         [
                           "radium_version_code",
                           "radium_32_version_code",
                         ])

  radium_version_name = radium_version_full
}
