# Copyright 2024 The Chromium Radium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/abi.gni")
import("//radium/android/radium_public_apk_tmpl.gni")

radium_apk_tmpl("radium_apk") {
  target_type = "android_apk"
  apk_name = "ChromiumRadium"

  if (android_64bit_target_cpu) {
    # Ensure 64-bit chrome does not depend on 32-bit things.
    assert_no_deps = [ "//build/config:toolchain_marker_" +
                       get_label_info(android_secondary_abi_toolchain, "name") ]
  }
}
